some minor changes
-world gen debug config option can now be changed while a world is open
-changed the color of underwater particles somewhat

--- a/src/main/resources/assets/simplyhotsprings/lang/en_us.lang
+++ b/src/main/resources/assets/simplyhotsprings/lang/en_us.lang
@@ -39,7 +39,7 @@ simplyhotsprings.config.potionEffect.tooltip=The namespaced effect that Hot Spri
 simplyhotsprings.config.potionEffectSettings=Potion Effect Settings
 simplyhotsprings.config.potionEffectSettings.tooltip=The first value is the duration of the effect (in ticks). The second value is the amplifier of the effect (0 is level 1).
 simplyhotsprings.config.worldgen=World Generation
-simplyhotsprings.config.worldgen.tooltip=These settings can't be changed while a world is open.
+simplyhotsprings.config.worldgen.tooltip=Most of these settings can't be changed while a world is open.
 simplyhotsprings.config.worldgen.info=#How to fill Whitelists and Blacklists
 simplyhotsprings.config.worldgen.info.tooltip=The command "/simplyhotsprings locationinfo" will tell you your current dimension ID as well as the name and types of the biome you're currently in. Use those results to fill in your whitelists and blacklists. It will also tell you whether or not a hot spring can generate there, so you can use it for testing your whitelists and blacklists. \n(This config setting does nothing other than list all biome types for your convenience, so put whatever you want in here.)
 simplyhotsprings.config.worldgen.worldGen=World Generation
@@ -49,18 +49,18 @@ simplyhotsprings.config.worldgen.worldGenIfBOPSprings.tooltip=If a world has Bio
 simplyhotsprings.config.worldgen.worldGenIfSuperflat=Generate in Superflat World Type
 simplyhotsprings.config.worldgen.worldGenIfSuperflat.tooltip=If the world type is Superflat, the hot springs from this mod won't generate. Set this to true to make them generate anyway.
 simplyhotsprings.config.worldgen.chance=Generation Chance
-simplyhotsprings.config.worldgen.chance.tooltip=The chance for a Hot Spring to generate is 1 over this value. So lower values are more likely.
+simplyhotsprings.config.worldgen.chance.tooltip=The chance for a hot spring to generate is 1 over this value. So lower values are more likely.
 simplyhotsprings.config.worldgen.debug=Generation Debug
 simplyhotsprings.config.worldgen.debug.tooltip=When a hot spring generates, prints the location to console.
 simplyhotsprings.config.worldgen.dimWhitelist=Dimension Whitelist
-simplyhotsprings.config.worldgen.dimWhitelist.tooltip=The dimension IDs where Hot Springs are allowed to generate. If empty, all dimensions are allowed.
+simplyhotsprings.config.worldgen.dimWhitelist.tooltip=The dimension IDs where hot springs are allowed to generate. If empty, all dimensions are allowed.
 simplyhotsprings.config.worldgen.dimBlacklist=Dimension Blacklist
-simplyhotsprings.config.worldgen.dimBlacklist.tooltip=The dimension IDs where Hot Springs are NOT allowed to generate.
+simplyhotsprings.config.worldgen.dimBlacklist.tooltip=The dimension IDs where hot springs are NOT allowed to generate.
 simplyhotsprings.config.worldgen.biomeTypeWhitelist=Biome Type Whitelist
-simplyhotsprings.config.worldgen.biomeTypeWhitelist.tooltip=The biome types where Hot Springs are allowed to generate. If empty, all biome types are allowed. \nThe Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied.
+simplyhotsprings.config.worldgen.biomeTypeWhitelist.tooltip=The biome types where hot springs are allowed to generate. If empty, all biome types are allowed. \nThe Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied.
 simplyhotsprings.config.worldgen.biomeTypeBlacklist=Biome Type Blacklist
-simplyhotsprings.config.worldgen.biomeTypeBlacklist.tooltip=The biome types where Hot Springs are NOT allowed to generate.
+simplyhotsprings.config.worldgen.biomeTypeBlacklist.tooltip=The biome types where hot springs are NOT allowed to generate.
 simplyhotsprings.config.worldgen.biomeNameWhitelist=Biome Name Whitelist
-simplyhotsprings.config.worldgen.biomeNameWhitelist.tooltip=The biome names where Hot Springs are allowed to generate. If empty, all biomes are allowed. \nThe Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied.
+simplyhotsprings.config.worldgen.biomeNameWhitelist.tooltip=The biome names where hot springs are allowed to generate. If empty, all biomes are allowed. \nThe Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied.
 simplyhotsprings.config.worldgen.biomeNameBlacklist=Biome Name Blacklist
-simplyhotsprings.config.worldgen.biomeNameBlacklist.tooltip=The biome names where Hot Springs are NOT allowed to generate. 
+simplyhotsprings.config.worldgen.biomeNameBlacklist.tooltip=The biome names where hot springs are NOT allowed to generate. 
