generation reason changes
-bring over the GenerationReason enum from the 1.16.5 version, with some changes
-rework locationinfo command to allow checking any biome & dimension combination you want
-minor change: if a dimension id is in both the dimension whitelist and the dimension blacklist, the dimension will have hot springs. previously, it wouldn't.

--- a/src/main/resources/assets/simplyhotsprings/lang/en_us.lang
+++ b/src/main/resources/assets/simplyhotsprings/lang/en_us.lang
@@ -13,8 +13,12 @@ simplyhotsprings.gen.reason.biome_type_blacklist=This biome has a type in the "B
 simplyhotsprings.gen.reason.biome_type_whitelist=This biome has a type in the "Biome Type Whitelist".
 simplyhotsprings.gen.reason.not_blacklisted=This biome wasn't excluded by any blacklists.
 simplyhotsprings.gen.reason.not_whitelisted=This biome was excluded by whitelists.
+simplyhotsprings.gen.reason.unknown_biome=Unknown biome!
+simplyhotsprings.gen.reason.allow_world=This World passed general hot spring checks. Whether they generate now depends on Biome.
 
 
+simplyhotsprings.command.invalid_dim_id=Dimension with ID '%s' does not exist
+simplyhotsprings.command.biome_not_found=Biome '%s' cannot be found
 simplyhotsprings.command.block_out_of_world=Cannot check block outside of world
 simplyhotsprings.command.click=Click to put in chat box
 simplyhotsprings.command.dim_id=Dimension ID: 
