--- a/src/main/resources/assets/simplyhotsprings/lang/en_us.json
+++ b/src/main/resources/assets/simplyhotsprings/lang/en_us.json
@@ -20,6 +20,25 @@
 	"commands.simplyhotsprings.biometypes.all": "All Biome Dictionary Types: ",
 	"commands.simplyhotsprings.biometypes.biomes": "All biomes in Biome Dictionary Type '%s': ",
 	"commands.simplyhotsprings.biometypes.click": "Click to list biomes with this type",
+	"commands.simplyhotsprings.help.click": "Click to see help",
+	"commands.simplyhotsprings.help.locationinfo.0": "/simplyhotsprings locationinfo",
+	"commands.simplyhotsprings.help.locationinfo.1": "   Checks your current biome and whether Hot Springs can generate there.",
+	"commands.simplyhotsprings.help.locationinfo.2": "/simplyhotsprings locationinfo <target>",
+	"commands.simplyhotsprings.help.locationinfo.3": "   Checks the entity's current biome and whether Hot Springs can generate there.",
+	"commands.simplyhotsprings.help.locationinfo.4": "/simplyhotpsrings locationinfo <x> <y> <z>",
+	"commands.simplyhotsprings.help.locationinfo.5": "   Checks the biome at the position and whether Hot Springs can generate there.",
+	"commands.simplyhotsprings.help.locationinfo.6": "/simplyhotsprings locationinfo <biome>",
+	"commands.simplyhotsprings.help.locationinfo.7": "   Checks the given biome and whether Hot Springs can generate there.",
+	"commands.simplyhotsprings.help.biomeslist.0": "/simplyhotsprings biomeslist all",
+	"commands.simplyhotsprings.help.biomeslist.1": "   Lists all biomes known by Simply Hot Springs.",
+	"commands.simplyhotsprings.help.biomeslist.2": "/simplyhotsprings biomeslist with",
+	"commands.simplyhotsprings.help.biomeslist.3": "   Lists all biomes known by Simply Hot Springs that CAN generate Hot Springs.",
+	"commands.simplyhotsprings.help.biomeslist.4": "/simplyhotsprings biomeslist without",
+	"commands.simplyhotsprings.help.biomeslist.5": "   Lists all biomes known by Simply Hot Springs that CANNOT generate Hot Springs.",
+	"commands.simplyhotsprings.help.biometypes.0": "/simplyhotsprings biometypes",
+	"commands.simplyhotsprings.help.biometypes.1": "   Lists all Biome Dictionary Types.",
+	"commands.simplyhotsprings.help.biometypes.2": "/simplyhotsprings biometypes <biome_type>",
+	"commands.simplyhotsprings.help.biometypes.3": "   Lists all biomes that are in the given Biome Dictionary Type.",
 	
 	"simplyhotsprings.gen.reason.no_world_gen": "The \"World Generation\" config option is false.",
 	"simplyhotsprings.gen.reason.in_name_whitelist": "This biome is in the \"Biome Name Whitelist\".",
