--- a/src/main/resources/assets/simplyhotsprings/lang/en_us.json
+++ b/src/main/resources/assets/simplyhotsprings/lang/en_us.json
@@ -45,8 +45,8 @@
 	"simplyhotsprings.gen.reason.in_name_blacklist": "This biome is in the \"Biome Name Blacklist\".",
 	"simplyhotsprings.gen.reason.in_type_blacklist": "This biome has a type in the \"Biome Type Blacklist\".",
 	"simplyhotsprings.gen.reason.in_type_whitelist": "This biome has a type in the \"Biome Type Whitelist\".",
-	"simplyhotsprings.gen.reason.empty_name_whitelist": "This biome wasn't excluded by any blacklists, and the \"Biome Name Whitelist\" is empty.",
-	"simplyhotsprings.gen.reason.empty_type_whitelist": "This biome wasn't excluded by any blacklists, and the \"Biome Type Whitelist\" is empty.",
+	"simplyhotsprings.gen.reason.empty_name_whitelist": "This biome isn't in any blacklists, and the \"Biome Name Whitelist\" is empty.",
+	"simplyhotsprings.gen.reason.empty_type_whitelist": "This biome isn't in any blacklists, and the \"Biome Type Whitelist\" is empty.",
 	"simplyhotsprings.gen.reason.not_whitelisted": "This biome was excluded by whitelists.",
 	"simplyhotsprings.gen.reason.unknown_biome": "Unknown biome!",
 	"simplyhotsprings.gen.reason.configured_error": "The Hot Spring configured feature failed to register! Report this bug!",
