config and command parity update
bringing everything up to date with the 1.16.5 version. all in one big commit, unfortunately. here's an overview.
CONFIG
-reorganized
-whether specific biomes can have hot springs is determined ahead of time instead of each time a hot spring tries to generate
-added input validators
-added '.' as a dummy entry for whitelists
-updated how to
COMMAND
-reorganized text components so that biome types from locationinfo can be individually copypasted
-added subcommands: biomeslist, biometypes, help
-all commands set a useful number to QueryResult in /stats

--- a/src/main/resources/assets/simplyhotsprings/lang/en_us.lang
+++ b/src/main/resources/assets/simplyhotsprings/lang/en_us.lang
@@ -7,28 +7,54 @@ simplyhotsprings.gen.reason.bop_springs=This world has Biomes O' Plenty hot spri
 simplyhotsprings.gen.reason.superflat=This world type is Superflat, and "Generate in Superflat World Type" is false.
 simplyhotsprings.gen.reason.dim_blacklist=This dimension is in the "Dimension Blacklist".
 simplyhotsprings.gen.reason.dim_whitelist=This dimension isn't in the "Dimension Whitelist".
-simplyhotsprings.gen.reason.biome_name_whitelist=This biome is in the "Biome Name Whitelist".
-simplyhotsprings.gen.reason.biome_name_blacklist=This biome is in the "Biome Name Blacklist".
-simplyhotsprings.gen.reason.biome_type_blacklist=This biome has a type in the "Biome Type Blacklist".
-simplyhotsprings.gen.reason.biome_type_whitelist=This biome has a type in the "Biome Type Whitelist".
-simplyhotsprings.gen.reason.not_blacklisted=This biome wasn't excluded by any blacklists.
+simplyhotsprings.gen.reason.in_name_whitelist=This biome is in the "Biome Name Whitelist".
+simplyhotsprings.gen.reason.in_name_blacklist=This biome is in the "Biome Name Blacklist".
+simplyhotsprings.gen.reason.in_type_blacklist=This biome has a type in the "Biome Type Blacklist".
+simplyhotsprings.gen.reason.in_type_whitelist=This biome has a type in the "Biome Type Whitelist".
+simplyhotsprings.gen.reason.empty_name_whitelist=This biome isn't in any blacklists, and the "Biome Name Whitelist" is empty.
+simplyhotsprings.gen.reason.empty_type_whitelist=This biome isn't in any blacklists, and the "Biome Type Whitelist" is empty.
 simplyhotsprings.gen.reason.not_whitelisted=This biome was excluded by whitelists.
 simplyhotsprings.gen.reason.unknown_biome=Unknown biome!
-simplyhotsprings.gen.reason.allow_world=This World passed general hot spring checks. Whether they generate now depends on Biome.
+simplyhotsprings.gen.reason.allow_world=This dimension passed hot spring checks. Whether they generate now depends on biome.
 
 
-simplyhotsprings.command.biome_not_found=Biome '%s' cannot be found
-simplyhotsprings.command.dim_not_found=Dimension with ID '%s' cannot be found
-simplyhotsprings.command.dim_not_created=Dimension type '%1$s' with ID '%2$s' has not been created yet
-simplyhotsprings.command.block_out_of_world=Cannot check block outside of world
-simplyhotsprings.command.click=Click to put in chat box
-simplyhotsprings.command.dim_id=Dimension ID: 
-simplyhotsprings.command.biome_name=Biome Name: 
-simplyhotsprings.command.biome_types=Biome Types: 
-simplyhotsprings.command.hot_springs=Hot Springs: 
-simplyhotsprings.command.reason=Reason: 
-simplyhotsprings.command.yes=Yes
-simplyhotsprings.command.no=No
+simplyhotsprings.command.locationinfo.biome_not_found=Biome '%s' cannot be found
+simplyhotsprings.command.locationinfo.block_out_of_world=Cannot check block outside of world
+simplyhotsprings.command.locationinfo.click=Click to put in chat box
+simplyhotsprings.command.locationinfo.dim_id=Dimension ID: 
+simplyhotsprings.command.locationinfo.biome_name=Biome Name: 
+simplyhotsprings.command.locationinfo.biome_types=Biome Types: 
+simplyhotsprings.command.locationinfo.hot_springs=Hot Springs: 
+simplyhotsprings.command.locationinfo.reason=Reason: 
+simplyhotsprings.command.locationinfo.yes=Yes
+simplyhotsprings.command.locationinfo.no=No
+simplyhotsprings.command.biomeslist.all=All biomes known by Simply Hot Springs: 
+simplyhotsprings.command.biomeslist.with=Hot Springs CAN generate in the following biomes: 
+simplyhotsprings.command.biomeslist.without=Hot Springs CANNOT generate in the following biomes: 
+simplyhotsprings.command.biomeslist.click=Click to check biome info for current dimension
+simplyhotsprings.command.biometypes.type_not_found=Biome Dictionary Type '%s' cannot be found
+simplyhotsprings.command.biometypes.all=All Biome Dictionary Types: 
+simplyhotsprings.command.biometypes.biomes=All biomes in Biome Dictionary Type '%s': 
+simplyhotsprings.command.biometypes.click=Click to list biomes with this type
+simplyhotsprings.command.help.click=Click to see help
+simplyhotsprings.command.help.locationinfo.0=/simplyhotsprings locationinfo
+simplyhotsprings.command.help.locationinfo.1=   Checks your current dimension, your current biome, and whether hot springs can generate there.
+simplyhotsprings.command.help.locationinfo.2=/simplyhotsprings locationinfo <target>
+simplyhotsprings.command.help.locationinfo.3=   Checks the entity's current dimension and biome, and whether hot springs can generate there.
+simplyhotsprings.command.help.locationinfo.4=/simplyhotpsrings locationinfo <x> <y> <z>
+simplyhotsprings.command.help.locationinfo.5=   Checks your current dimension, the biome at the position, and whether hot springs can generate there.
+simplyhotsprings.command.help.locationinfo.6=/simplyhotsprings locationinfo <biome>
+simplyhotsprings.command.help.locationinfo.7=   Checks your current dimension, the given biome, and whether hot springs can generate there.
+simplyhotsprings.command.help.biomeslist.0=/simplyhotsprings biomeslist all
+simplyhotsprings.command.help.biomeslist.1=   Lists all biomes known by Simply Hot Springs.
+simplyhotsprings.command.help.biomeslist.2=/simplyhotsprings biomeslist with
+simplyhotsprings.command.help.biomeslist.3=   Lists all biomes known by Simply Hot Springs that CAN generate hot springs.
+simplyhotsprings.command.help.biomeslist.4=/simplyhotsprings biomeslist without
+simplyhotsprings.command.help.biomeslist.5=   Lists all biomes known by Simply Hot Springs that CANNOT generate hot springs.
+simplyhotsprings.command.help.biometypes.0=/simplyhotsprings biometypes
+simplyhotsprings.command.help.biometypes.1=   Lists all Biome Dictionary Types.
+simplyhotsprings.command.help.biometypes.2=/simplyhotsprings biometypes <biome_type>
+simplyhotsprings.command.help.biometypes.3=   Lists all biomes that are in the given Biome Dictionary Type.
 
 
 simplyhotsprings.config.createsSources=Creates Source Blocks
@@ -40,7 +66,7 @@ simplyhotsprings.config.potionEffectSettings.tooltip=The first value is the dura
 simplyhotsprings.config.worldgen=World Generation
 simplyhotsprings.config.worldgen.tooltip=Most of these settings can't be changed while a world is open.
 simplyhotsprings.config.worldgen.info=#How to fill Whitelists and Blacklists
-simplyhotsprings.config.worldgen.info.tooltip=The command "/simplyhotsprings locationinfo" will tell you your current dimension ID as well as the name and types of the biome you're currently in. Use those results to fill in your whitelists and blacklists. It will also tell you whether or not a hot spring can generate there, so you can use it for testing your whitelists and blacklists. \n(This config setting does nothing other than list all biome types for your convenience, so put whatever you want in here.)
+simplyhotsprings.config.worldgen.info.tooltip=The command "/simplyhotsprings" has a few subcommands that will help you fill in your whitelists and blacklists and test to see if they work. For example, "/simplyhotsprings locationinfo" will tell you the name and types of the biome you're currently in and whether hot springs can generate there. To see how to use "/simplyhotsprings", run the command "/simplyhotsprings help". \n(Also, this config setting does nothing, so put whatever you want in here.)
 simplyhotsprings.config.worldgen.worldGen=World Generation
 simplyhotsprings.config.worldgen.worldGen.tooltip=Set to false to stop hot springs from generating.
 simplyhotsprings.config.worldgen.worldGenIfBOPSprings=Generate Alongside Biomes O' Plenty Hot Springs
@@ -56,10 +82,10 @@ simplyhotsprings.config.worldgen.dimWhitelist.tooltip=The dimension IDs where ho
 simplyhotsprings.config.worldgen.dimBlacklist=Dimension Blacklist
 simplyhotsprings.config.worldgen.dimBlacklist.tooltip=The dimension IDs where hot springs are NOT allowed to generate.
 simplyhotsprings.config.worldgen.biomeTypeWhitelist=Biome Type Whitelist
-simplyhotsprings.config.worldgen.biomeTypeWhitelist.tooltip=The biome types where hot springs are allowed to generate. If empty, all biome types are allowed. \nThe Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied.
+simplyhotsprings.config.worldgen.biomeTypeWhitelist.tooltip=The biome types where hot springs are allowed to generate. If empty, all biome types are allowed. \nThe Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied. You can use a period as a dummy entry. 
 simplyhotsprings.config.worldgen.biomeTypeBlacklist=Biome Type Blacklist
 simplyhotsprings.config.worldgen.biomeTypeBlacklist.tooltip=The biome types where hot springs are NOT allowed to generate.
 simplyhotsprings.config.worldgen.biomeNameWhitelist=Biome Name Whitelist
-simplyhotsprings.config.worldgen.biomeNameWhitelist.tooltip=The biome names where hot springs are allowed to generate. If empty, all biomes are allowed. \nThe Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied.
+simplyhotsprings.config.worldgen.biomeNameWhitelist.tooltip=The individual biomes where hot springs are allowed to generate. If empty, all biomes are allowed. \nThe Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied. You can use a period as a dummy entry. 
 simplyhotsprings.config.worldgen.biomeNameBlacklist=Biome Name Blacklist
-simplyhotsprings.config.worldgen.biomeNameBlacklist.tooltip=The biome names where hot springs are NOT allowed to generate. 
+simplyhotsprings.config.worldgen.biomeNameBlacklist.tooltip=The individual biomes where hot springs are NOT allowed to generate. 
