--- a/src/main/resources/assets/simplyhotsprings/lang/en_us.json
+++ b/src/main/resources/assets/simplyhotsprings/lang/en_us.json
@@ -20,6 +20,11 @@
 	"commands.simplyhotsprings.biometypes.all": "All Biome Dictionary Types: ",
 	"commands.simplyhotsprings.biometypes.biomes": "All biomes in Biome Dictionary Type '%s': ",
 	"commands.simplyhotsprings.biometypes.click": "Click to list biomes with this type",
+	"commands.simplyhotsprings.placespring.placed": "Generated a Hot Spring around %1$s %2$s %3$s. ",
+	"commands.simplyhotsprings.placespring.not_placed": "Failed to generate a Hot Spring around %1$s %2$s %3$s. ",
+	"commands.simplyhotsprings.placespring.too_low": "There wasn't enough space above y=0 for the Hot Spring to generate.",
+	"commands.simplyhotsprings.placespring.failed": "Either there is a liquid above the Hot Spring or there weren't enough solid blocks to hold the Hot Spring Water.",
+	"commands.simplyhotsprings.placespring.click": "Click to teleport",
 	"commands.simplyhotsprings.help.click": "Click to see help",
 	"commands.simplyhotsprings.help.locationinfo.0": "/simplyhotsprings locationinfo",
 	"commands.simplyhotsprings.help.locationinfo.1": "   Checks your current biome and whether Hot Springs can generate there.",
@@ -39,6 +44,8 @@
 	"commands.simplyhotsprings.help.biometypes.1": "   Lists all Biome Dictionary Types.",
 	"commands.simplyhotsprings.help.biometypes.2": "/simplyhotsprings biometypes <biome_type>",
 	"commands.simplyhotsprings.help.biometypes.3": "   Lists all biomes that are in the given Biome Dictionary Type.",
+	"commands.simplyhotsprings.help.placespring.0": "/simplyhotsprings placespring <x> <y> <z>",
+	"commands.simplyhotsprings.help.placespring.1": "   Attempts to generate a Hot Spring centered at the position. If the north-west corner is air, moves down to the next solid block.",
 	
 	"simplyhotsprings.gen.reason.no_world_gen": "The \"World Generation\" config option is false.",
 	"simplyhotsprings.gen.reason.in_name_whitelist": "This biome is in the \"Biome Name Whitelist\".",
