Biome Grasses config option
in 1.18, it's no longer possible to simply check a biome's top block. but dirt must still be changed to mycelium in mushroom field biomes, so there's a new config option for  inputting biome-specific grasses. not ideal, but it works.

--- a/src/main/resources/assets/simplyhotsprings/lang/en_us.json
+++ b/src/main/resources/assets/simplyhotsprings/lang/en_us.json
@@ -83,5 +83,7 @@
 	"simplyhotsprings.config.worldgen.biomeNameWhitelist": "Biome Name Whitelist",
 	"simplyhotsprings.config.worldgen.biomeNameWhitelist.tooltip": "The individual biomes where Hot Springs are allowed to generate. If empty, all biomes are allowed. \nThe Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied. You can use a period as a dummy entry. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect.",
 	"simplyhotsprings.config.worldgen.biomeNameBlacklist": "Biome Name Blacklist",
-	"simplyhotsprings.config.worldgen.biomeNameBlacklist.tooltip": "The individual biomes where Hot Springs are NOT allowed to generate. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect."
+	"simplyhotsprings.config.worldgen.biomeNameBlacklist.tooltip": "The individual biomes where Hot Springs are NOT allowed to generate. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect.",
+	"simplyhotsprings.config.worldgen.biomeGrasses": "Biome Grasses",
+	"simplyhotsprings.config.worldgen.biomeGrasses.tooltip": "A list of biomes and their specific types of grass. \nBy default, dirt around Hot Springs will be turned into grass. But some biomes have their own specific grass type which you need to tell Simply Hot Springs about. \nThe format is \"modid:biome;modid:block[states]\". \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect."
 }
