--- a/src/main/resources/assets/simplyhotsprings/lang/en_us.json
+++ b/src/main/resources/assets/simplyhotsprings/lang/en_us.json
@@ -85,5 +85,7 @@
 	"simplyhotsprings.config.worldgen.biomeNameWhitelist": "Biome Name Whitelist",
 	"simplyhotsprings.config.worldgen.biomeNameWhitelist.tooltip": "The individual biomes where Hot Springs are allowed to generate. If empty, all biomes are allowed. \nThe Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied. You can use a period as a dummy entry. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect.",
 	"simplyhotsprings.config.worldgen.biomeNameBlacklist": "Biome Name Blacklist",
-	"simplyhotsprings.config.worldgen.biomeNameBlacklist.tooltip": "The individual biomes where Hot Springs are NOT allowed to generate. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect."
+	"simplyhotsprings.config.worldgen.biomeNameBlacklist.tooltip": "The individual biomes where Hot Springs are NOT allowed to generate. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect.",
+	"simplyhotsprings.config.client.alternateParticles": "Alternate Particles",
+	"simplyhotsprings.config.client.alternateParticles.tooltip": "If true, Hot Spring Water makes smaller, less obtrusive steam particles instead."
 }
